--- a/public/locales/ar/chat.json
+++ b/public/locales/ar/chat.json
@@ -32,6 +32,6 @@
   
   
   "Please enter a message": "يرجى إدخال رسالة",
-  "Chatbot UI is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "Chatbot UI هي مجموعة متقدمة للدردشة تستخدم",
+  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "JaduGPT هي مجموعة متقدمة للدردشة تستخدم",
   "Are you sure you want to clear all messages?": "هل أنت متأكد أنك تريد مسح كافة الرسائل؟"
 }
