--- a/public/locales/id/chat.json
+++ b/public/locales/id/chat.json
@@ -4,7 +4,7 @@
     "Stop Generating": "Berhenti Menghasilkan",
     "Prompt limit is {{maxLength}} characters": "Batas karakter untuk prompt adalah {{maxLength}} karakter",
     "System Prompt": "Prompt Sistem",
-    "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Anda adalah ChatGPT, model bahasa besar yang dilatih oleh OpenAI. Ikuti instruksi pengguna dengan hati-hati. Balas menggunakan markdown.",
+    "You are JaduGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Anda adalah JaduGPT, model bahasa besar yang dilatih oleh OpenAI. Ikuti instruksi pengguna dengan hati-hati. Balas menggunakan markdown.",
     "Enter a prompt": "Masukkan sebuah prompt",
     "Regenerate response": "Hasilkan kembali respons",
     "Sorry, there was an error.": "Maaf, terjadi kesalahan.",
@@ -23,6 +23,6 @@
     "click if using a .env.local file": "klik jika menggunakan file .env.local",
     "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "Batas karakter untuk pesan adalah {{maxLength}} karakter. Anda telah memasukkan {{valueLength}} karakter.",
     "Please enter a message": "Silakan masukkan sebuah pesan",
-    "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "JaduGPT adalah kit chatbot canggih untuk model obrolan OpenAI yang bertujuan meniru antarmuka dan fungsionalitas ChatGPT.",
+    "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic JaduGPT's interface and functionality.": "JaduGPT adalah kit chatbot canggih untuk model obrolan OpenAI yang bertujuan meniru antarmuka dan fungsionalitas JaduGPT.",
     "Are you sure you want to clear all messages?": "Apakah Anda yakin ingin menghapus semua pesan?"
 }
