--- a/public/locales/it/chat.json
+++ b/public/locales/it/chat.json
@@ -4,7 +4,7 @@
   "Stop Generating": "Interrompi la generazione",
   "Prompt limit is {{maxLength}} characters": "Il limite del messaggio è di {{maxLength}} caratteri",
   "System Prompt": "Prompt del sistema",
-  "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Sei ChatGPT, un grande modello di linguaggio addestrato da OpenAI. Segui attentamente le istruzioni dell'utente. Rispondi usando il markdown.",
+  "You are JaduGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Sei JaduGPT, un grande modello di linguaggio addestrato da OpenAI. Segui attentamente le istruzioni dell'utente. Rispondi usando il markdown.",
   "Enter a prompt": "Inserisci un prompt",
   "Regenerate response": "Rigenera risposta",
   "Sorry, there was an error.": "Scusa, si è verificato un errore.",
@@ -23,6 +23,6 @@
   "click if using a .env.local file": "Fai click se stai utilizzando un file .env.local",
   "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "Il limite del messaggio è di {{maxLength}} caratteri. Hai inserito {{valueLength}} caratteri.",
   "Please enter a message": "Per favore, scrivi un messaggio",
-  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "JaduGPT è un kit avanzato di chatbot per i modelli di chat di OpenAI che mira a imitare l'interfaccia e le funzionalità di ChatGPT.",
+  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic JaduGPT's interface and functionality.": "JaduGPT è un kit avanzato di chatbot per i modelli di chat di OpenAI che mira a imitare l'interfaccia e le funzionalità di JaduGPT.",
   "Are you sure you want to clear all messages?": "Sei sicuro di voler cancellare tutti i messaggi?"
 }
