--- a/public/locales/ja/chat.json
+++ b/public/locales/ja/chat.json
@@ -4,7 +4,7 @@
   "Stop Generating": "回答をストップ",
   "Prompt limit is {{maxLength}} characters": "プロンプトの文字数は{{maxLength}}文字までです",
   "System Prompt": "システムのプロンプト",
-  "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "あなたはOpenAIによってトレーニングされた大規模言語モデルのChatGPTです。ユーザーの指示には注意深く従ってください。マークダウンを使用して応答してください。",
+  "You are JaduGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "あなたはOpenAIによってトレーニングされた大規模言語モデルのJaduGPTです。ユーザーの指示には注意深く従ってください。マークダウンを使用して応答してください。",
   "Enter a prompt": "プロンプトを入力してください",
   "Regenerate response": "もう一度回答する",
   "Sorry, there was an error.": "すみません、エラーが発生しました。",
@@ -23,6 +23,6 @@
   "click if using a .env.local file": "もし.env.localファイルを使用している場合はこちらをクリックしてください",
   "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "メッセージの文字数は{{maxLength}}文字までです。あなたは{{valueLength}}文字を入力しました。",
   "Please enter a message": "メッセージを入力してください",
-  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "JaduGPTは、ChatGPTと同様のインターフェイスと機能を実現するための、チャットボットキットです。",
+  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic JaduGPT's interface and functionality.": "JaduGPTは、JaduGPTと同様のインターフェイスと機能を実現するための、チャットボットキットです。",
   "Are you sure you want to clear all messages?": "すべてのメッセージを削除してもよろしいですか？"
 }
