--- a/public/locales/ko/chat.json
+++ b/public/locales/ko/chat.json
@@ -4,7 +4,7 @@
   "Stop Generating": "생성 중지",
   "Prompt limit is {{maxLength}} characters": "프롬프트 제한은 {{maxLength}}자입니다",
   "System Prompt": "시스템 프롬트",
-  "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "당신은 OpenAI에서 훈련된 대규모 언어 모델 ChatGPT입니다. 사용자의 지시를 주의해서 따르세요. 마크다운을 사용하여 응답하세요.",
+  "You are JaduGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "당신은 OpenAI에서 훈련된 대규모 언어 모델 JaduGPT입니다. 사용자의 지시를 주의해서 따르세요. 마크다운을 사용하여 응답하세요.",
   "Enter a prompt": "프롬프트를 입력하세요",
   "Regenerate response": "응답 재생성",
   "Sorry, there was an error.": "죄송합니다, 오류가 발생했습니다.",
@@ -23,6 +23,6 @@
   "click if using a .env.local file": "click if using a .env.local file",
   "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "메시지 제한은 {{maxLength}}자입니다. {{valueLength}}자를 입력했습니다.",
   "Please enter a message": "메시지를 입력하세요",
-  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "JaduGPT는 ChatGPT의 인터페이스와 기능을 모방하는 것을 목표로 둔 OpenAI의 채팅 모델들을 위한 고급 챗봇 키트입니다.",
+  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic JaduGPT's interface and functionality.": "JaduGPT는 JaduGPT의 인터페이스와 기능을 모방하는 것을 목표로 둔 OpenAI의 채팅 모델들을 위한 고급 챗봇 키트입니다.",
   "Are you sure you want to clear all messages?": "모든 메시지를 지우시겠습니까?"
 }
