--- a/public/locales/pt/chat.json
+++ b/public/locales/pt/chat.json
@@ -4,7 +4,7 @@
   "Stop Generating": "Parar de gerar",
   "Prompt limit is {{maxLength}} characters": "O limite da mensagem é de {{maxLength}} caracteres",
   "System Prompt": "Mensagem do sistema",
-  "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Você é o ChatGPT, um grande modelo de linguagem treinado pela OpenAI. Siga as instruções do usuário cuidadosamente. Responda usando markdown.",
+  "You are JaduGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Você é o JaduGPT, um grande modelo de linguagem treinado pela OpenAI. Siga as instruções do usuário cuidadosamente. Responda usando markdown.",
   "Enter a prompt": "Insira uma mensagem",
   "Regenerate response": "Gerar resposta novamente",
   "Sorry, there was an error.": "Desculpe, ocorreu um erro.",
@@ -23,6 +23,6 @@
   "click if using a .env.local file": "clique se estiver usando um arquivo .env.local",
   "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "O limite de mensagens é de {{maxLength}} caracteres. Você inseriu {{valueLength}} caracteres",
   "Please enter a message": "Por favor, insira uma mensagem",
-  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "JaduGPT é um kit de chatbot avançado para os modelos de chat do OpenAI com o objetivo de imitar a interface e a funcionalidade do ChatGPT.",
+  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic JaduGPT's interface and functionality.": "JaduGPT é um kit de chatbot avançado para os modelos de chat do OpenAI com o objetivo de imitar a interface e a funcionalidade do JaduGPT.",
   "Are you sure you want to clear all messages?": "Tem certeza de que deseja limpar todas as mensagens?"
 }
