--- a/public/locales/sv/chat.json
+++ b/public/locales/sv/chat.json
@@ -4,7 +4,7 @@
   "Stop Generating": "Sluta generera",
   "Prompt limit is {{maxLength}} characters": "Din prompt kan inte ha fler än {{maxLength}} tecken",
   "System Prompt": "System prompt",
-  "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Du är ChatGPT, en stor språkmodell tränad av OpenAI. Följ användarens instruktioner noggrant. Svara genom att använda markdown.",
+  "You are JaduGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "Du är JaduGPT, en stor språkmodell tränad av OpenAI. Följ användarens instruktioner noggrant. Svara genom att använda markdown.",
   "Enter a prompt": "Ange en prompt",
   "Regenerate response": "Återskapa svar",
   "Sorry, there was an error.": "Ursäkta, det uppstod ett fel.",
@@ -23,6 +23,6 @@
   "click if using a .env.local file": "klicka om du använder en .env.local-fil",
   "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "Meddelandegränsen är {{maxLength}} tecken. Du har angett {{valueLength}} tecken.",
   "Please enter a message": "Vänligen ange ett meddelande",
-  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "JaduGPT är ett avancerat chatbot-kit för OpenAI:s chattmodeller som syftar till att efterlikna ChatGPT:s gränssnitt och funktionalitet.",
+  "JaduGPT is an advanced chatbot kit for OpenAI's chat models aiming to mimic JaduGPT's interface and functionality.": "JaduGPT är ett avancerat chatbot-kit för OpenAI:s chattmodeller som syftar till att efterlikna JaduGPT:s gränssnitt och funktionalitet.",
   "Are you sure you want to clear all messages?": "Är du säker på att du vill rensa alla meddelanden?"
 }
